@@ -612,6 +612,12 @@ CHARCREATIONSCRIPTS=
 # value is 5.
 MAXITEMSHOWN=5
 
+# The MAXITEMSWORN tells the system the maximum number of items
+# that can be directly worn, even if the mob has enough wear
+# locations to accomodate more items.
+# The default value is 30
+MAXITEMSWORN=30
+
 # The DEFAULTPLAYERFLAGS is a comma-delimited list of player 
 # flags to turn on by default when a player is first created,
 # or for the time before they log in.  Options include:
