@@ -1127,7 +1127,14 @@
 			<BR>
 			<FONT COLOR=WHITE>@INIValue?MASK=MAXITEMSHOWN&INIHELP@
 		</TD></TR>
-		
+
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>MAXITEMSWORN</FONT>
+			</TD><TD WIDTH=80% VALIGN=TOP>
+			<INPUT TYPE=TEXT NAME=MAXITEMSWORN SIZE=60 VALUE="@INIValue?MASK=MAXITEMSWORN&VALUE@">
+			<BR>
+			<FONT COLOR=WHITE>@INIValue?MASK=MAXITEMSWORN&INIHELP@
+		</TD></TR>
+
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>DEFAULTPLAYERFLAGS</FONT>
 			</TD><TD WIDTH=80% VALIGN=TOP>
 			<INPUT TYPE=TEXT NAME=DEFAULTPLAYERFLAGS SIZE=60 VALUE="@INIValue?MASK=DEFAULTPLAYERFLAGS&VALUE@">
